--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2 class="w3-text-white">About Me</h2>
     <hr style="width:200px" class="w3-white">
     <p style="color: white">
-      Hello, I'm Abrar Jawad Tarafder, a Computer Science student studying at York University. I have made this short portfolio to provide easy access to my Resumem my personal website, my wix website and my github for projects! Feel free to check them out!
+      Hello, I'm Abrar Jawad Tarafder, a Computer Science student studying at York University. I have made this short portfolio to provide easy access to my Resume, my personal website, my wix website and my github for projects! Feel free to check them out!
     </p>
    
 
