--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </a>
     <a href="#projects" class="w3-bar-item w3-button w3-padding-large w3-hover-grey">
       <i class="fa fa-book w3-xxlarge"></i>
-      <p>Projects</p>
+      <p>PROJECTS</p>
     </a>
 
   </nav>
@@ -126,9 +126,9 @@
       <!-- End About Section -->
     </div>
 
-    <!-- ProjectSection -->
+    <!-- Project Section -->
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="projects">
-      <h2 class="w3-text-white">Projects</h2>
+      <h2 class="w3-text-white">Project Summary</h2>
       <hr style="width:200px" class="w3-white">
 
       <h3 class="w3-text-white">Data Analytics and Databases</h2>
@@ -178,7 +178,7 @@
 
 
 
-                    <!-- End About Section -->
+<!-- End Projecy Section -->
     </div>
 
 
