--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     #main {
       margin-left: 0
     }
+
+
+
   }
 
   body {
@@ -131,23 +134,24 @@
       <h2 class="w3-text-white">Project Summary</h2>
       <hr style="width:200px" class="w3-white">
 
-      <h3 class="w3-text-white">Data Analytics and Databases</h2>
+      <h3 class="w3-text-white">Data Analytics and Databases</h3>
         <p style="color: white">
           I completed Google's Data Analytics course with Coursera and have completed a project that includes Excel, SQL
-          and other tools. I am planning on enrolling in other certifications courses as well. Check it out on my Github!
+          and other tools. I am planning on enrolling in other certifications courses as well. Check it out on my
+          Github!
         </p>
-        <h3 class="w3-text-white">Game Development</h2>
+      <h3 class="w3-text-white">Game Development</h3>
           <p style="color: white">
             I have been working on making some 2d games as a hobby and am just getting started with some basic games and
             more. Check it out on my Github!
           </p>
-          <h3 class="w3-text-white">Frontend, Web Development and Design</h2>
+          <h3 class="w3-text-white">Frontend, Web Development and Design</h3>
             <p style="color: white">
               I am currently learning frontend web development and design since my current job requires me to have
               that skill and have made this portfolio as well as my personal website. The wix website that I made was
               part of web-design as well as some Figma work. See my websites links above!
             </p>
-            <h3 class="w3-text-white">Hackathons</h2>
+            <h3 class="w3-text-white">Hackathons</h3>
               <p style="color: white">
 
                 I have attended 3 hackathons (one-conjoint) to date and have worked with some amazing people where we
@@ -160,17 +164,27 @@
                   Projects
                 </a>
               </button>
-              <h3 class="w3-text-white">Backend and MERN Stack (includes Beginner Projects)</h2>
+              <h3 class="w3-text-white">Backend and MERN Stack (includes Beginner Projects)</h3>
                 <p style="color: white">
                   I have worked on some smaller beginner projects to learn new languages (ie -- calculators and such)
                   and have also been trying to learn the MERN stack. Check them out on my Github!
                 </p>
-                <h3 class="w3-text-white">Marketing Certifications</h2>
+                <h3 class="w3-text-white">Marketing Certifications</h3>
                   <p style="color: white">
                     I worked as a digital marketer for a couple of months and I had gotten my role through some
                     certifications that are up on my LinkedIn. I personally believe the more you learn, the better!
                   </p>
-                  <h3 class="w3-text-white">Machine Learning and AI</h2>
+                  <h3 class="w3-text-white">Simple Calorie Calculator</h3>
+                    <p style="color: white">
+                     Passionate about fitness so I decided to make this simple website that tracks calories!
+                    </p>
+                  <button class="w3-button w3-light-grey w3-padding-large w3-section">
+                <a href="https://abrartarafder.github.io/calorie-calculator/"
+                  style="color: black; text-decoration: none;">
+                  Calorie Calculator
+                </a>
+              </button>
+                  <h3 class="w3-text-white">Machine Learning and AI</h3>
                     <p style="color: white">
                       Will be working towards making some projects regarding this soon!
                     </p>
@@ -178,7 +192,7 @@
 
 
 
-<!-- End Projecy Section -->
+                    <!-- End Projecy Section -->
     </div>
 
 
