--- a/index.html
+++ b/index.html
@@ -179,7 +179,9 @@
                     <p style="color: white">
                       Will be working towards making some projects regarding this soon!
                     </p>
-                    <h3 class="w3-text-white">Bonus Passion Project</h2>
+                    <br>
+                    <h3 class="w3-text-white">Bonus Passion Projects</h2>
+                      <h6 class="w3-text-white">Photo Album</h6>
                       <p style="color: white">
                       I love taking pictures as well as editing pictures taken by other people and as a passion project I am also currently working on trying to make an album for my photos!
                       </p>
@@ -214,6 +216,17 @@
                           <span class="visually-hidden">Next</span>
                         </button>
                       </div>
+                      <br>
+                      <h6 class="w3-text-white">Simple Calorie Calculator</h6>
+                      <p style="color: white">
+                       Passionate about fitness so I decided to make this simple website that tracks calories!
+                      </p>
+                    <button class="w3-button w3-light-grey w3-padding-large w3-section">
+                  <a href="https://abrartarafder.github.io/calorie-calculator/"
+                    style="color: black; text-decoration: none;">
+                    Calorie Calculator
+                  </a>
+                </button>
 
 
 
