--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <p style="color: white">
         Hello, I'm Abrar Jawad Tarafder, a Computer Science student studying at York University. I have made this short
         portfolio to provide easy access to my Resume, my personal website, my wix website and my github for projects!
-        Feel free to check them out!
+        Feel free to check them out! Also if you'd like to gain more insight into the different types of projects I am working on, feel free to check out Project Summary section. 
       </p>
 
 
