--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
       <button style="background-color: blueviolet;" class="w3-button w3-light-grey w3-padding-large w3-section">
-        <a href="Resume_Abrar_Tech.pdf" style="color: black; text-decoration: none;">
+        <a href="Resume_Abrar_SWE.pdf" style="color: black; text-decoration: none;">
           <i class="fa fa-download"></i> Download Resume
         </a>
       </button>
