--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                       <br>
                       <h6 class="w3-text-white">Simple Calorie Calculator</h6>
                       <p style="color: white">
-                       Passionate about fitness so I decided to make this simple website that tracks calories!
+                       Passionate about fitness so I decided to make this simple website that tracks calories, answers some common fitness questions and provides sample workouts based on muscle groups!
                       </p>
                     <button class="w3-button w3-light-grey w3-padding-large w3-section">
                   <a href="https://abrartarafder.github.io/calorie-calculator/"
