--- a/index.html
+++ b/index.html
@@ -227,6 +227,17 @@
                     Calorie Calculator
                   </a>
                 </button>
+                <br>
+                <h6 class="w3-text-white">One Piece Beginners Guide</h6>
+                <p style="color: white">
+                Decided to make a beginner's guide to one of the most famous anime's in the world, One Piece. Something I wish I read before starting the anime! (Follows the Calorie Calculator and Portfolio Website Template)
+                </p>
+              <button class="w3-button w3-light-grey w3-padding-large w3-section">
+            <a href="https://abrartarafder.github.io/one-piece/"
+              style="color: black; text-decoration: none;">
+             One Piece Guide
+            </a>
+          </button>
 
 
                       <!-- End Projecy Section -->
