--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@
             <h3 class="w3-text-white">Hackathons</h2>
               <p style="color: white">
 
-                I have attended 3 hackathons (one-conjoint) to date and have worked with some amazing people where we
-                made a flight tracker app and a password-storage app. Check them out!
+                I have attended 4 hackathons (one-conjoint) to date and have won 1 ambassador hackathon where I worked with some amazing people where we
+                made projects such as landing pages, flight tracker and a password-protection app. Check them out!
 
+        
               </p>
               <button class="w3-button w3-light-grey w3-padding-large w3-section">
                 <a href="https://devpost.com/abrart1075?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"
