--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <h3 class="w3-text-white">Hackathons</h2>
               <p style="color: white">
 
-                I have attended 4 hackathons (one-conjoint) to date and have won 1 ambassador hackathon where I worked with some amazing people where we
+                I have attended 5 hackathons (E2E Encrypted Everything @Hack '21, CalHacks 8.0 '21, McHacks 9.0 '22, Jarvis Ambassador Hackathon '23, UNHack '23) to date and have won 1 ambassador hackathon where I worked with some amazing people where we
                 made projects such as landing pages, flight tracker and a password-protection app. Check them out!
 
         
