--- a/index.html
+++ b/index.html
@@ -180,10 +180,11 @@
               part of web-design as well as some Figma work. See my websites links above!
             </p>
             <h3 class="w3-text-white">Hackathons</h2>
-              <p style="color: white">
-
-                I have attended 5 hackathons (E2E Encrypted Everything @Hack '21, CalHacks 8.0 '21, McHacks 9.0 '22, Jarvis Ambassador Hackathon '23, UNHack '23) to date and have won 1 hackathon (Jarvis Ambassador Hackathon) where I worked with some amazing people to
-                create cool projects. Check them out!
+<p style="color: white">
+  I have attended 5 hackathons 
+  <span style="color: rgb(138, 202, 245);">(E2E Encrypted Everything @Hack '21, CalHacks 8.0 '21, McHacks 9.0 '22, Jarvis Ambassador Hackathon '23, UNHack '23)</span>
+  <span style="color: white;"> to date and have won 1 hackathon (Jarvis Ambassador Hackathon) where I worked with some amazing people to create cool projects. Check them out!</span>
+</p>
 
         
               </p>
