--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       </p>
 
 
-      <button style="background-color: blueviolet;" class="w3-button w3-light-grey w3-padding-large w3-section">
+      <button style="width:210px ;background-color: blueviolet;" class="w3-button w3-light-grey w3-padding-large w3-section">
         <a href="Resume_Abrar_JT.pdf" style="color: black; text-decoration: none;">
           <i class="fa fa-download"></i> Download Resume
         </a>
@@ -151,15 +151,20 @@
         </a>
       </button>
 
+      <button class="w3-button w3-light-grey w3-padding-small w3-section">
+        <a href="https://github.com/abrartarafder" style="color: black; text-decoration: none; font-size: 26px;">
+          <i class="fa fa-github"></i> <a style="font-size: 15px;">My Github</a>
+        </a>
+      </button>
+
       <button class="w3-button w3-light-grey w3-padding-large w3-section">
-        <a href="https://github.com/abrartarafder" style="color: black; text-decoration: none;">
-          <i class="fa fa-github"></i> Github for Projects
+        <a href="https://abrartarafder.github.io/expanded-resume/" style="color: black; text-decoration: none;">
+          <i class="fa fa-globe"></i> CV Website
         </a>
       </button>
 
       <!-- End About Section -->
     </div>
-
 
     <!-- Project Section -->
     <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="projects">
