--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </button>
 
       <button class="w3-button w3-light-grey w3-padding-large w3-section">
-        <a href="https://abrartarafder.github.io/expanded-resume/" style="color: black; text-decoration: none;">
+        <a href="https://abrartarafder.github.io/abrar-cv-expanded/" style="color: black; text-decoration: none;">
           <i class="fa fa-globe"></i> CV Website
         </a>
       </button>
