--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               part of web-design as well as some Figma work. See my websites links above!
             </p>
             <button class="w3-button w3-light-grey w3-padding-large w3-section">
-              <a href="https://abrartarafder.github.io/expanded-resume/" style="color: black; text-decoration: none;">
+              <a href="https://abrartarafder.github.io/abrar-cv-expanded/" style="color: black; text-decoration: none;">
                 My CV Website
               </a>
             </button>
