--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Abrar portfolio</title>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -10,6 +11,9 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<link rel="icon" href="assets/img/favicon-16x16.png" type="image/x-icon">
+<title>Abrar portfolio</title>
+</head>
 <style>
   body,
   h1,
@@ -117,7 +121,7 @@
     <header class="w3-container w3-padding-32 w3-center" id="home">
       <h1 class="w3-jumbo"><span class="w3-hide-small">Hi, I'm</span> Abrar Jawad Tarafder.</h1>
       <p>A Computer Science Student in Toronto, Ontario</p>
-      <img src="Toronto Skyline.jpg" class="w3-image" width="992" height="1508">
+      <img src="assets/img/Toronto Skyline.jpg" class="w3-image" width="992" height="1508">
     </header>
 
     <!-- About Section -->
@@ -134,7 +138,7 @@
 
 
       <button style="width:210px ;background-color: blueviolet;" class="w3-button w3-light-grey w3-padding-large w3-section">
-        <a href="Resume_Abrar_JT.pdf" style="color: black; text-decoration: none;">
+        <a href="assets/img/resume/Resume_Abrar_JT.pdf" style="color: black; text-decoration: none;">
           <i class="fa fa-download"></i> Download Resume
         </a>
       </button>
@@ -245,16 +249,16 @@
                         </div>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="city.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/city.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="railway.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/railway.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="Toronto Skyline.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/Toronto Skyline.jpg" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="garden.jpg" class="d-block w-100" alt="...">
+                            <img src="assets/img/garden.jpg" class="d-block w-100" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
