--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
       <h3 class="w3-text-white">Edify</h2>
         <p style="color: white">
-          In order to solve UN Sustainability Goal regarding Quality Education, Edify was created. This project involves
+          In order to solve UN Sustainability Goal regarding Quality Education during UNHack 2023 (York University's very own Hackathon), Edify was created by my team and I. This project involves
           an AI-driven online learning platform tailored to individual learning styles (audio, visual, read/write and
           hands on) ensuring privacy and safety for children. This innovative tool personalizes education, provides
           predictive analytics, and encourages collaboration and hands-on learning through workshops. The team, with
