--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abrar's Portfolio</h1>
-      <p>Insight into my <span class="typed" data-typed-items="Projects, Passion Projects, Areas of Interests"></span></p>
+      <p>Insight into my <span class="typed" data-typed-items="Projects, Interests, Creativity"></span></p>
     </div>
   </section><!-- End Hero -->
 
