--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
               </a>
             </div>
             <div class="col-2">
-              <a href="https://abrartarafder.github.io/" download="resume.pdf">
+              <a href="https://abrartarafder.github.io/">
                 <button type="button" style="margin-bottom: 10px; width: 300px;" class="btn btn-dark">Personal
                   Website</button>
               </a>
             </div>
             <div class="col-2">
-              <a href="https://abrart1075.wixsite.com/my-site" download="resume.pdf">
+              <a href="https://abrart1075.wixsite.com/my-site">
                 <button type="button" style="margin-bottom: 10px; width: 300px;" class="btn btn-dark">Personal
                  Wix Website</button>
               </a>
             </div>
             <div class="col-2">
-              <a href="https://github.com/abrartarafder" download="resume.pdf">
+              <a href="https://github.com/abrartarafder">
                 <button type="button" style="margin-bottom: 10px; width: 300px;" class="btn btn-dark">
                  Github</button>
               </a>
             </div>
             <div class="col-2">
-              <a href="https://abrartarafder.github.io/abrar-cv-expanded/" download="resume.pdf">
+              <a href="https://abrartarafder.github.io/abrar-cv-expanded/">
                 <button type="button" style="margin-bottom: 10px; width: 300px;" class="btn btn-dark">
                  CV Website</button>
               </a>
