--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </ul>
       </nav><!-- .nav-menu -->
     </div>
-    <li class="nav-item" style="margin-left: 20px; margin-top: 18rem;">
+    <li class="nav-item" style="margin-top: 18rem;">
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/abrar-tarafder/" class="nav-link"><i class="fa fa-linkedin  w3-xlarge w3-hover-opacity" style="color:#ff9d00;"></i></a>
         <a href="mailto:abrart1075@gmail.com" class="nav-link"><i class="fa fa-envelope w3-xlarge w3-hover-opacity" style="color:#ff9d00;"></i></a>
