--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                 <span></span></a></li>
           <li><a href="https://www.linkedin.com/in/abrar-tarafder/" class="nav-link scrollto"><i style="color: #ff9d00" class="bx bxl-linkedin w"></i>
                   <span></span></a></li>
+          <li><a href="" id="clock" class="clock"><i class="bx bi-clock"></i>
+            <span></span></a></li>
           
             
         </ul>
@@ -348,3 +350,4 @@
 </body>
 
 </html>
+
