--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/picdes.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i
                     class="bx bx-plus"></i></a>
-                <a href="" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://abrartarafder.github.io/image-gallery/index.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
