--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <br>
           <div class="col">
             <div class="col-2">
-              <a href="../assets/img/Resume_Abrar_JT.pdf" download="resume.pdf">
+              <a href="./assets/img/Resume_Abrar_jt.pdf" download="resume.pdf">
                 <button type="button" style="margin-bottom: 10px; width: 300px;" class="btn btn-dark">Download
                   Resume</button>
               </a>
